--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,20 +2,53 @@
     margin: 0;
     padding: 0;
 }
-
+:root{
+    font-size: 100%;
+}
 body{
     height: 100vh;
     color: white;
 }
 
+/* 
+rem: medida de font baseado no tamanho da fonte default do navegador conhecido como root
+em: medida da font baseada no tamanha da font do elemento pai 
+*/
+
 body, input, button, textarea{
-    font-size: 1.1rem;
-    line-height: 1.3;
-    font-family: 'Nunito', sans-serif;
+    font: 400 1rem/1.2 'Nunito', sans-serif;
 }
 
 #page-landing{
     background: linear-gradient(329.54deg, #29b6d1 0%, #00c7c7 100%);
     min-height: 100vh;
     text-align: center;
+
+    display: flex;
+   
+}
+
+#container{
+    margin: auto;
+    width: 90%;
+}
+
+
+.location, h1, .visit p{
+    height: 16vh;   
+}
+
+.visit a{
+    height: 4.5rem;
+    width: 4.5rem;
+    background: #ffd666;
+
+    border:none;
+    border-radius: 1.7rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: auto;
 }
