--- a/public/css/page-orphanages.css
+++ b/public/css/page-orphanages.css
@@ -8,7 +8,7 @@
 aside{
     width: clamp(15rem, 25vw, 44rem);
     background: linear-gradient(329.54deg, #15B6D6 0%, #15D6D6 100%);
-    padding: clamp(2rem, 5vw, 5rem);
+    padding: clamp(2rem, 4.5vw, 5rem);
 
     display: flex;
     flex-direction: column;
@@ -29,6 +29,11 @@ aside p{
 
 aside footer p{
     margin-top: .2rem;
+}
+
+#mapid{
+    width: 100%;
+    height: 100%;
 }
 
 /* button */
@@ -53,4 +58,44 @@ a.create-orphanage{
 
 a.create-orphanage:hover{
     background: #17D6EB;
+}
+
+.leaflet-popup-content-wrapper{
+    background: rgba(255,255,255, 0.8);
+    border-radius: 15px;
+}
+
+.leaflet-popup-content{
+    color: #0089A5;
+    margin: .8rem 1.2rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.leaflet-popup-content a{
+    width: 2rem;
+    height: 2rem;
+    background: #15C3D6;
+    border-radius: 10px;
+    box-shadow: 17.2868px, 27.65px, 41.48px rgba(23, 142, 166, 0.20);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: background-color 200ms;
+}
+
+.leaflet-popup-content a:hover{
+    background: #17D6EB;
+}
+
+.leaflet-popup-tip{
+    display:none;
+}
+
+.leaflet-container{
+    font: 700 1rem/.5 'Nunito', sans-serif;
 }
