--- a/public/css/page-orphanages.css
+++ b/public/css/page-orphanages.css
@@ -42,6 +42,8 @@ a.create-orphanage{
     position: absolute;
     right: 2rem;
     bottom: 2rem;
+    z-index: 2;
+    
 
     width: 3.7rem;
     height: 3.7rem;
@@ -98,4 +100,5 @@ a.create-orphanage:hover{
 
 .leaflet-container{
     font: 700 1rem/.5 'Nunito', sans-serif;
+    z-index: 1;
 }
