pages.js has been created

--- a/src/views/location-orphanages.hbs
+++ b/src/views/location-orphanages.hbs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Localize um orfanato | Happy</title>
-        <link rel="icon" href="./public/images/logo-icon.png">
+        <link rel="icon" href="/images/logo-icon.png">
 
         <!-- Leaflet Library for interactive maps -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -17,9 +17,9 @@
         crossorigin=""></script>
 
         <!-- styles -->
-        <link rel="stylesheet" href="./public/css/main.css">
-        <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/location-orphanages.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/animations.css">
+        <link rel="stylesheet" href="/css/location-orphanages.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
         
@@ -28,7 +28,7 @@
        <div id="page-orphanages">
            <aside class="animate-right">
                <header>
-                   <img src="./public/images/map-marker.svg" alt="Happy">
+                   <img src="/images/map-marker.svg" alt="Happy">
                    <h2>Escolha um orfanato no mapa</h2>
                    <p>Muitas crianças estão esperando sua visita :)</p>
                </header>
@@ -39,9 +39,9 @@
            </aside>
            <div id="mapid" class="animate-appear"></div>
            <a href="form-orphanage.html" class="create-orphanage" title="cadastre um orfanato">
-               <img src="./public/images/plus.svg" alt="Criar orfanato">
+               <img src="/images/plus.svg" alt="Criar orfanato">
            </a>
        </div>
-       <script src="./public/scripts/location-orphanages.js"></script>
+       <script src="/scripts/location-orphanages.js"></script>
     </body>
 </html>
