--- a/src/views/form-orphanage.hbs
+++ b/src/views/form-orphanage.hbs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Cadastre um orfanato | Happy</title>
-        <link rel="icon" href="./public/images/logo-icon.png">
+        <link rel="icon" href="/images/logo-icon.png">
 
         <!-- Leaflet Library for interactive maps -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -17,13 +17,13 @@
         crossorigin=""></script>
 
         <!-- styles -->
-        <link rel="stylesheet" href="./public/css/main.css">
-        <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/sidebar.css">
-        <link rel="stylesheet" href="./public/css/map.css">
-        <link rel="stylesheet" href="./public/css/form-orphanage.css">
-        <link rel="stylesheet" href="./public/css/register-orphanage.css">
-        <link rel="stylesheet" href="./public/css/buttons.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/animations.css">
+        <link rel="stylesheet" href="/css/sidebar.css">
+        <link rel="stylesheet" href="/css/map.css">
+        <link rel="stylesheet" href="/css/form-orphanage.css">
+        <link rel="stylesheet" href="/css/register-orphanage.css">
+        <link rel="stylesheet" href="/css/buttons.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
         
@@ -31,10 +31,10 @@
     <body>
        <div id="create-orphanage">
            <aside class="animate-right sidebar">
-               <img src="./public/images/map-marker.svg" alt="Happy">
+               <img src="/images/map-marker.svg" alt="Happy">
                <footer>
                    <button onclick="history.back();">
-                       <img src="./public/images/arrow-back.svg" alt="Voltar">
+                       <img src="/images/arrow-back.svg" alt="Voltar">
                    </button>  
                </footer>
            </aside>
@@ -78,13 +78,13 @@
                                 <div class="new-upload">
                                     <input name="images" placeholder="Insira o link da foto aqui" required>
                                     <span onclick="removeUpload(event)">
-                                        <img src="./public/images/remove-file.svg" alt="">
+                                        <img src="/images/remove-file.svg" alt="">
                                     </span>
                                 </div>
                             </div>
                              <!-- type para remover o efeito de submit do button -->
                             <button onclick="addPhotoField()" type="button">
-                                <img src="./public/images/add-file.svg" alt="">
+                                <img src="/images/add-file.svg" alt="">
                             </button>
                         </div>
                         
@@ -130,6 +130,6 @@
                     </fieldset>
                 </form>
             </main>
-       <script src="./public/scripts/form-orphanage.js"></script>
+       <script src="/scripts/form-orphanage.js"></script>
     </body>
 </html>
