--- a/src/views/page-landing.hbs
+++ b/src/views/page-landing.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
                     <h1 class="animate-up">Leve felicidade para o mundo</h1>
                     <section class="visit">
                         <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças.</p>
-                        <a href="location-orphanages.html" target="_blank" title="Visite orfanatos" class="animate-up">
+                        <a href="/location-orphanages" target="_blank" title="Visite orfanatos" class="animate-up">
                             <img src="/images/arrow.svg" alt="Ir para o mapa">
                         </a>
                     </section>
