--- a/src/views/spot-orphanage.hbs
+++ b/src/views/spot-orphanage.hbs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Lar das meninas | Happy</title>
-        <link rel="icon" href="./public/images/logo-icon.png">
+        <link rel="icon" href="/images/logo-icon.png">
 
         <!-- Leaflet Library for interactive maps -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -17,11 +17,11 @@
         crossorigin=""></script>
 
         <!-- styles -->
-        <link rel="stylesheet" href="./public/css/main.css">
-        <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/sidebar.css">
-        <link rel="stylesheet" href="./public/css/map.css">
-        <link rel="stylesheet" href="./public/css/spot-orphanage.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/animations.css">
+        <link rel="stylesheet" href="/css/sidebar.css">
+        <link rel="stylesheet" href="/css/map.css">
+        <link rel="stylesheet" href="/css/spot-orphanage.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
         
@@ -29,17 +29,17 @@
     <body>
        <div id="spot-orphanage">
            <aside class="animate-right sidebar">
-               <img src="./public/images/map-marker.svg" alt="Happy">
+               <img src="/images/map-marker.svg" alt="Happy">
                <footer>
                    <button onclick="history.back();">
-                       <img src="./public/images/arrow-back.svg" alt="Voltar">
+                       <img src="/images/arrow-back.svg" alt="Voltar">
                    </button>
                    
                </footer>
            </aside>
             <main class="animate-appear with-sidebar">
                 <div class="orphanage-details">
-                    <img src="./public/images/home.jpg" alt="Lar das meninas">
+                    <img src="/images/home.jpg" alt="Lar das meninas">
                     <div class="images">
                         <button onclick="selectImage(event)" class="active" type="button">
                             <img src="https://source.unsplash.com/random?id=1" alt="Lar das meninas">
@@ -81,21 +81,21 @@
                         <p>Venha quando se sentir a vontade e traga muito amor e paciência para dar.</p>
                         <div class="open-details">
                             <div class="hour">
-                                <img src="./public/images/clock.svg" alt="Horários">
+                                <img src="/images/clock.svg" alt="Horários">
                                 Horário de visitas Das 8h as 18h
                             </div>
                             <div class="open-on-weekends">
-                                <img src="./public/images/info.svg" alt="Informações">
+                                <img src="/images/info.svg" alt="Informações">
                                 Atendemos aos fins de semana
                             </div>
                         </div>
                         <button class="primary-button" type="button">
-                            <img src="./public/images/whatsapp.svg" alt="Chamar no whatsapp">
+                            <img src="/images/whatsapp.svg" alt="Chamar no whatsapp">
                             Entrar em contato
                         </button>
                     </div>
                 </div>
             </main>
-       <script src="./public/scripts/spot-orphanage.js"></script>
+       <script src="/scripts/spot-orphanage.js"></script>
     </body>
 </html>
