back-end has been done

--- a/src/views/location-orphanages.hbs
+++ b/src/views/location-orphanages.hbs
@@ -42,7 +42,7 @@
             <!--#each vai criar um elemento para cada item da lista de orphanages, 
             e vai acessar a propriedade de cada objeto dessa lista-->
             <div class="orphanages">
-                {{#each orphanages}}
+                {{#each orphanagesList}}
 
                     <span hidden 
                     data-id="{{this.id}}" 
