--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -14,7 +14,12 @@
     justify-content: center;
 
     transition: background-color 200ms;
+    text-decoration: none;;
 
+}
+
+.primary-button a{
+    text-decoration: none;
 }
 
 .button-select{
